scroll: fix scrolling on mobile Chrome (#11710)

--- a/public/sass/pages/_dashboard.scss
+++ b/public/sass/pages/_dashboard.scss
@@ -45,6 +45,8 @@ div.flot-text {
   height: calc(100% - 27px);
   position: relative;
   overflow: hidden;
+  // Fixes scrolling on mobile devices
+  overflow-y: scroll;
 }
 
 .panel-title-container {
